crates/crap-core/src/adapters/reporters/snapshots/crap_core__adapters__reporters__markdown__tests__grouped_markdown_snapshot.snap
---
source: crates/crap-core/src/adapters/reporters/markdown.rs
expression: out
---
<!-- test-adapter:scorecard -->

# test-adapter v0.4.0 — CRAP Score Analysis

## Summary

**Result:** FAIL · **Functions:** 3 · **Above threshold (8):** 2

| Metric     | Worst | Average | Median |
|------------|------:|--------:|-------:|
| CRAP       | 45.20 |   21.07 |  15.00 |
| Complexity |    20 |     9.3 |    6.0 |
| Coverage   | 30.0% |   65.8% |  72.5% |

**Risk distribution:** low 1 · acceptable 0 · moderate 1 · high 1

## Per-file aggregates

| File | Functions | Failing | Avg CRAP | Worst CRAP | Worst Fn |
|------|-----------|---------|----------|------------|----------|
| src/domain/crap.rs | 1 | 1 | 45.20 | 45.20 | complex_fn |
| src/adapters/coverage/mod.rs | 1 | 1 | 15.00 | 15.00 | parse_record |
| src/lib.rs | 1 | 0 | 3.00 | 3.00 | simple_fn |
